cabal-version:      3.0
name:               duvet
version:            0.1.0.0
-- synopsis:
-- description:
license:            BSD-3-Clause
license-file:       LICENSE
author:             Cajunvoodoo
maintainer:         27892784+Cajunvoodoo@users.noreply.github.com
-- copyright:
category:           Math
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:
      Duvet
      Checker.Hcover
    -- other-modules:
    -- other-extensions:
    build-depends:
     , base ^>=4.18.2.1
     , optparse-applicative
     , vector
     , containers
     , megaparsec
     , pretty-simple
     , vass
     , text
     , timeit
     , cassava
     , bytestring
     , filepath
     , silently
    hs-source-dirs:   src
    default-language: Haskell2010
    default-extensions:
     , TypeSynonymInstances
     , UnicodeSyntax
     , RecordWildCards
     , OverloadedStrings
     , QuasiQuotes
     , LambdaCase
     , FlexibleInstances
     , TupleSections
     , LambdaCase
     , GeneralizedNewtypeDeriving
     , TypeFamilies
